# qdrant-ai-search

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile.railway  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  railway.json  test_ai.txt
.github/workflows/: deploy.yml  test.yml
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  embedding.py  file_loader.py  main.py  openai_chat_service.py  pyproject.toml  pytest.ini  qdrant_service.py  rust_bridge.py
backend/exceptions/: __init__.py  base.py  embedding.py  external_service.py  file_processing.py  search.py  summarization.py
backend/models/: search.py  summarize.py
backend/routes/: config.py  search.py  summarize.py  upload.py
backend/services/: embedding.py  openai_chat_service.py  qdrant_service.py  rust_bridge.py
backend/tests/: test_metrics.py  test_search_validation.py
backend/utils/: exception_handler.py  file_loader.py  idf.py  logging_config.py  smart_chunker.py  text_cleaner.py
docs/: API_ROUTES.md  SEMANTIC_CHUNKING_SUMMARY.md
helm/backend/: values.yaml
helm/backend/templates/: deployment.yaml  service.yaml
helm/grafana/: Chart.yaml  values.yaml
helm/grafana/dashboards/: qdrant-ai-dashboard.json
helm/grafana/templates/: configmap.yaml  deployment.yaml  service.yaml
helm/loki/: Chart.yaml  values.yaml
helm/loki/templates/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
helm/prometheus/: values.yaml
helm/prometheus/templates/: configmap.yaml  deployment.yaml
helm/promtail/: Chart.yaml  values.yaml
helm/promtail/templates/: _helpers.tpl  configmap.yaml  daemonset.yaml  rbac.yaml
helm/qdrant/: values.yaml
helm/qdrant/templates/: deployment.yaml  service.yaml
helm/rust-accelerator/: Chart.yaml  values.yaml
helm/rust-accelerator/templates/: _helpers.tpl  deployment.yaml  service.yaml
monitoring/: README.md
monitoring/grafana/dashboards/: logs-dashboard.json
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: config.yml
rust_accelerator/: Cargo.toml  Dockerfile
rust_accelerator/src/: error.rs  main.rs
rust_accelerator/src/handlers/: health.rs  mod.rs  rerank.rs
rust_accelerator/src/models/: internal.rs  mod.rs  request.rs  response.rs
rust_accelerator/src/services/: mod.rs  rerank_service.rs
rust_accelerator/src/tests/: health_tests.rs  integration_tests.rs  mod.rs  rerank_tests.rs
rust_accelerator/src/utils/: filtering.rs  mod.rs  scoring.rs  similarity.rs  text_analysis.rs  timing.rs
