[project]
name = "backend"
version = "0.1.0"
description = "Production-grade semantic search API backend"
authors = [
    {name = "Maksym Dombrov", email = "maksymdombrov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "qdrant-client (>=1.15.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
black = "^25.1.0"
ruff = "^0.12.5"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '/(\.venv|build|dist)/'

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = []

