[project]
name = "backend"
version = "0.1.0"
description = "Production-grade semantic search API backend"
authors = [
    {name = "Maksym Dombrov", email = "maksymdombrov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
package-mode = false
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "qdrant-client (>=1.15.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "langchain-text-splitters (>=0.3.9,<0.4.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (>=3.8.7,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
black = "^25.1.0"
ruff = "^0.12.5"
pre-commit = "^4.2.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"  # for TestClient

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '/(\.venv|build|dist)/'

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = []

