[package]
name = "rust_accelerator"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.8"
prometheus = "0.13.4"